3.5.1/_sources/gallery/misc/fill_spiral.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/misc/fill_spiral.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_misc_fill_spiral.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_misc_fill_spiral.py:


===========
Fill Spiral
===========

.. GENERATED FROM PYTHON SOURCE LINES 7-30



.. image-sg:: /gallery/misc/images/sphx_glr_fill_spiral_001.png
   :alt: fill spiral
   :srcset: /gallery/misc/images/sphx_glr_fill_spiral_001.png, /gallery/misc/images/sphx_glr_fill_spiral_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. code-block:: default

    import matplotlib.pyplot as plt
    import numpy as np

    theta = np.arange(0, 8*np.pi, 0.1)
    a = 1
    b = .2

    for dt in np.arange(0, 2*np.pi, np.pi/2.0):

        x = a*np.cos(theta + dt)*np.exp(b*theta)
        y = a*np.sin(theta + dt)*np.exp(b*theta)

        dt = dt + np.pi/4.0

        x2 = a*np.cos(theta + dt)*np.exp(b*theta)
        y2 = a*np.sin(theta + dt)*np.exp(b*theta)

        xf = np.concatenate((x, x2[::-1]))
        yf = np.concatenate((y, y2[::-1]))

        p1 = plt.fill(xf, yf)

    plt.show()


.. _sphx_glr_download_gallery_misc_fill_spiral.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: fill_spiral.py <fill_spiral.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: fill_spiral.ipynb <fill_spiral.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
